Avoid table of contents overflow.

--- a/api/css/extra.css
+++ b/api/css/extra.css
@@ -1,7 +1,3 @@
-body > div.container {
-    width: 85%;
-}
-
 .bg-primary {
     background-image: repeating-linear-gradient(114deg, #0d0d10 0%, #1b1b21 22%, #0d0d10 64%, #111115 100%);
 }
@@ -11,9 +7,9 @@ a, a:hover, a code, a code:hover, .btn-link, .btn-link:hover, .page-link:hover {
 }
 
 .dropdown-item:hover, .dropdown-item:focus, .dropdown-item.active, .dropdown-item:active, .custom-control-label::before {
-    background-color:#ff1111
+    background-color: #ff1111
 }
 
-.bs-sidebar {
-    font-size: 0.8rem;
+.nav-link {
+    overflow-wrap: anywhere;
 }
